--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,17 @@ menu:
   首页: /
   归档: /archives
   关于: /about
-  工具: /tools
+  #工具: /tools
   
 
 widgets:
-- search
+#- search
 - category
-- intro
-- weibo
+- tag
+- tagcloud
+- links
+#- intro
+#- weibo
 
 excerpt_link: 阅读全文
 
@@ -31,5 +34,10 @@ addthis:
 
 fancybox: true
 
-google_analytics: UA-41207871-1
-rss: http://zipperary.com/atom.xml
+google_analytics: UA-66671506-1
+
+
+links:
+  Google: https://www.google.com.hk
+  Baidu:  http://www.baidu.com
+
